# learning-blaze

./: MODULE.bazel  bazel-bazel_practice  bazel-bin  bazel-out  bazel-testlogs
main/: BUILD  hello.cc
patches/: BUILD  abseil-cpp-trivially-relocatable.patch
proto/: BUILD  submission.proto
utils/: BUILD  checker.cc  checker.h  checker_test.cc
