###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "27.2")
bazel_dep(name = "abseil-cpp", version = "20230802.0.bcr.1")

single_version_override(
    module_name = "abseil-cpp",
    version = "20230802.0.bcr.1",
    patches = ["//patches:abseil-cpp-trivially-relocatable.patch"],
    patch_strip = 1,
)
